--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -12,8 +13,10 @@
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/redux-logger": "^3.0.8",
+    "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "draft-js": "^0.11.7",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -45,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/classnames": "^2.2.11",
     "@types/react-facebook-login": "^4.1.2",
     "@types/react-redux": "^7.1.14",
