--- a/package.json
+++ b/package.json
@@ -3,34 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.2",
-    "@material-ui/icons": "^4.11.2",
-    "@react-page/editor": "^2.1.0-beta.4",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/draft-js": "^0.10.44",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.62",
-    "@types/react": "^16.9.49",
-    "@types/react-dom": "^16.9.8",
-    "@types/redux-logger": "^3.0.8",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
-    "draft-js": "^0.11.7",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.0",
-    "react-digraph": "^8.0.0-beta.7",
     "react-dom": "^17.0.0",
-    "react-facebook-login": "^4.1.1",
-    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "redux": "^4.0.5",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "typescript": "^3.7.5"
+    "typescript": "4.1.3"
+  },
+  "devDependencies": {
+    "@types/jest": "^24.9.1",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/axios": "^0.14.0",
+    "@types/classnames": "^2.2.11",
+    "@types/react-router-dom": "^5.1.6",
+    "@typescript-eslint/eslint-plugin": "4.1.1",
+    "@typescript-eslint/parser": "4.1.1",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-react": "7.20.6",
+    "prettier": "2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,19 +43,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/axios": "^0.14.0",
-    "@types/classnames": "^2.2.11",
-    "@types/react-facebook-login": "^4.1.2",
-    "@types/react-redux": "^7.1.14",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/redux": "^3.6.0",
-    "@types/redux-thunk": "^2.1.0",
-    "@typescript-eslint/eslint-plugin": "4.1.1",
-    "@typescript-eslint/parser": "4.1.1",
-    "eslint-config-prettier": "6.11.0",
-    "eslint-plugin-react": "7.20.6",
-    "prettier": "2.1.2"
   }
 }
